[package]
name = "oscavmgr"
version = "0.3.0"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
glam = "0.28.0"
glob = "0.3.1"
log = "0.4.19"
mdns-sd = "0.11.1"
once_cell = "1.18.0"
regex = "1.10.2"
reqwest = { version = "0.12.3", features = [
  "blocking",
  "charset",
], default-features = false }
rosc = "0.10.1"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.107"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
alvr_events = { git = "https://github.com/alvr-org/ALVR.git", optional = true }
alvr_common = { git = "https://github.com/alvr-org/ALVR.git", optional = true }
ovr_overlay = { git = "https://github.com/galister/ovr_overlay_oyasumi.git", optional = true }
sysinfo = { version = "0.30.0", optional = true }
websocket-lite = { version = "0.5.2", optional = true, default-features = false }
anyhow = "1.0.82"
indicatif = "0.17.8"
colored = "2.1.0"
indicatif-log-bridge = "0.2.2"

[features]
default = ["alvr"]
alvr = [
  "dep:alvr_events",
  "dep:alvr_common",
  "dep:sysinfo",
  "dep:websocket-lite",
]
wivrn = []
babble = []
openvr = ["dep:ovr_overlay"]
