[package]
name = "oscavmgr"
version = "0.4.1"
edition = "2021"

[dependencies]
env_logger = "0.11.3"
glam = { version = "0.28.0", features = ["mint"] }
glob = "0.3.1"
log = "0.4.19"
mdns-sd = "0.11.1"
once_cell = "1.18.0"
regex = "1.10.2"
reqwest = { version = "0.12.3", features = [
  "blocking",
  "charset",
], default-features = false }
rosc = "0.10.1"
serde = { version = "1.0.188", features = ["derive", "rc"] }
serde_json = "1.0.107"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
alvr_events = { git = "https://github.com/alvr-org/ALVR.git", optional = true, branch = "v20" }
alvr_common = { git = "https://github.com/alvr-org/ALVR.git", optional = true, branch = "v20" }
sysinfo = { version = "0.31.2", optional = true }
websocket-lite = { version = "0.5.2", optional = true, features = [] }
anyhow = "1.0.82"
indicatif = "0.17.8"
colored = "2.1.0"
indicatif-log-bridge = "0.2.2"
openxr = { git = "https://github.com/galister/openxrs", default-features = false, features = [
  "linked",
  "mint",
], optional = true }
mint = "0.5.9"
clap = { version = "4.5.16", features = ["derive"] }

[features]
default = ["alvr", "openxr", "babble"]
alvr = [
  "dep:alvr_events",
  "dep:alvr_common",
  "dep:sysinfo",
  "dep:websocket-lite",
]
openxr = ["dep:openxr"]
babble = []
