[package]
name = "oscavmgr"
version = "0.4.4"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
glam = { version = "0.29.2", features = ["mint"] }
glob = "0.3.2"
log = "0.4.25"
mdns-sd = "0.13.2"
once_cell = "1.20.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = [
  "blocking",
  "charset",
], default-features = false }
rosc = "0.10.1"
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_json = "1.0.138"
strum = { version = "0.27.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
alvr_events = { git = "https://github.com/alvr-org/ALVR.git", optional = true, branch = "v20" }
alvr_common = { git = "https://github.com/alvr-org/ALVR.git", optional = true, branch = "v20" }
sysinfo = { version = "0.33.0", optional = true }
websocket-lite = { version = "0.5.2", optional = true, features = [] }
anyhow = "1.0.95"
indicatif = "0.17.11"
colored = "3.0.0"
indicatif-log-bridge = "0.2.3"
openxr = { git = "https://github.com/galister/openxrs", default-features = false, features = [
  "linked",
  "mint",
], optional = true }
mint = "0.5.9"
clap = { version = "4.5.28", features = ["derive"] }

[features]
default = ["alvr", "openxr", "babble"]
alvr = [
  "dep:alvr_events",
  "dep:alvr_common",
  "dep:sysinfo",
  "dep:websocket-lite",
]
openxr = ["dep:openxr"]
babble = []
